# cad-models

./: .gitignore  pyproject.toml  rb4011-rack-shelf.3mf
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
cad_models/: cable_clip.py  cli.py  common.py  fastener.py  keystone_patch_panel.py  keystone_surface_mount.py  oversized_rack_mount.py  oversized_rack_shelf.py  rack_bracket.py  rack_mount.py  rack_shelf.py  rack_tray_test.py  rb4011_bracket.py  rb4011_mount.py  reolink_doorbell_mount.py  rpi_ssd_adapter.py  utils.py
cad_models/assemblies/: __init__.py  bgw320_mount.py  coda56_mount.py  generic_blank_mount.py  generic_hue_bridge_mount.py  generic_rpi_mount.py  mt6000_mount.py  rack_inner_bracket.py  rack_outer_bracket.py  rb4011_mount.py  thinkcentre_mount.py  wall_patch_panel.py  wall_patch_panel_bracket.py  wall_slat_canvas_hanger.py
cad_models/compounds/: keystone_receiver.py  keystone_receiver.step
cad_models/data/: __init__.py  keystone-receiver.step
cad_models/external_models/: keystone-receiver.stl  reinforced-patch-panel-left.stl  reinforced-patch-panel-right.stl
cad_models/fastener/: __init__.py
cad_models/models/: __init__.py  bgw320.py  bgw320_mount_bracket_bottom.py  bgw320_mount_bracket_top.py  coda56.py  coda56_mount_bottom_bracket.py  coda56_mount_bracket.py  coda56_mount_bracket_bottom.py  coda56_mount_bracket_top.py  coda56_mount_top_bracket.py  generic_blank.py  generic_blank_captive.py  generic_blank_tray.py  generic_bracket.py  generic_hue_bridge.py  generic_hue_bridge_tray.py  generic_middle_blank.py  generic_rpi_tray.py  (+27 more)
