[project]
name="models"
version="0.0.0"
dependencies=[
    "bd_warehouse @ git+https://github.com/gumyr/bd_warehouse@18d0d5d09724f388bc5c6801f25dd8ebf2a945df",
    # build123d <-> cadquery-ocp revlocked
    # TODO: update build123d when a linux-aarch64 build of cadquery-ocp exists
    "build123d==0.8.0",
    "cadquery-ocp==7.7.2.1",
    "click",
    "ocp_tessellate",
    "ocp_vscode",
]

[project.scripts]
cad-models = "cad_models.cli:main"